update bump angle drive